Make username clickable

--- a/public/styles.css
+++ b/public/styles.css
@@ -16,10 +16,14 @@ body{
 
 .AvatarText{
     font-weight: bold;
+}
+
+.HiddenLink{
     text-decoration: none;
     color: black;
 }
-.AvatarText:hover {
+
+.HiddenLink:hover{
     text-decoration: underline;
     color: black;
 }
